[gd_scene load_steps=8 format=3 uid="uid://bslrbnyuw2rvm"]

[ext_resource type="Script" path="res://components/NPCharacter.tscn.gd" id="1_dik1x"]
[ext_resource type="Texture2D" uid="uid://fntfr1msklia" path="res://assets/ph_vengeful_spirit.png" id="1_pfjb2"]
[ext_resource type="PackedScene" uid="uid://d3tetmsy6ira5" path="res://components/InteractPoint.tscn" id="2_vdo8e"]
[ext_resource type="PackedScene" uid="uid://bf16y1tuvk02b" path="res://components/DialogBox.tscn" id="3_4ki1v"]
[ext_resource type="Texture2D" uid="uid://dvyoh1wb3oj3r" path="res://assets/tooltip.png" id="3_338x4"]
[ext_resource type="Texture2D" uid="uid://bb34nirqaxb6t" path="res://assets/tooltip_now.png" id="4_qmmkh"]
[ext_resource type="Texture2D" uid="uid://cfwt1uvnkd646" path="res://assets/dialog_box_arrow.png" id="7_jrtvq"]

[node name="NPCharacter" type="Node2D"]
script = ExtResource("1_dik1x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pfjb2")

[node name="InteractPoint" parent="." instance=ExtResource("2_vdo8e")]
z_index = 100
type = "Dialog"
dialog_key = "first"

[node name="SpriteDiamond" type="Sprite2D" parent="InteractPoint"]
position = Vector2(0, -130)
texture = ExtResource("7_jrtvq")

[node name="TooltipInteractable" type="Sprite2D" parent="InteractPoint"]
position = Vector2(0, -143.5)
texture = ExtResource("3_338x4")

[node name="TooltipInteractableNow" type="Sprite2D" parent="InteractPoint"]
position = Vector2(0, -143.5)
texture = ExtResource("4_qmmkh")

[node name="DialogBox" parent="." instance=ExtResource("3_4ki1v")]
z_index = 1000
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -200.0
offset_right = 32.5
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="area_entered" from="InteractPoint" to="." method="_on_interact_point_area_entered"]
[connection signal="area_exited" from="InteractPoint" to="." method="_on_interact_point_area_exited"]

[editable path="InteractPoint"]
[editable path="DialogBox"]
